# hackathon2025

./: .env  README.md  adk_service.py  hack2025_scratch_.txt  main.py  pyproject.toml  requirements.txt  test.py
.adk/: session.db
anamoly_agent/: __init__.py  agent copy 2.py  agent copy 3.py  agent copy.py  agent.py  custom_model.py  custom_model_predict.py  forrest_iso.py  opik_tracer.py  pyrca_sample.py  pyrca_test.py  tool.py
api/: __init__.py  api_client.py  routing.py  rt2.py
config/: __init__.py  settings.py
eval/: test_eval.py
eval/eval_data/: anam.test.json
ui/: ui2.py
